
================================================================================================
Requirements

-Jargon depends on Java 1.5+
-Jargon is built using Apache ANT
-Jargon has been tested against IRODS 2.1, IRODS2.2, and IRODS2.3

libraries
---------  

-gsi-classes.jar (packaged in lib directory)
-junit-4.7.jar (packaged in lib) - used by unit testing classes, not necessary for Jargon deployment
-apache commons-exec-1.0.1.jar (packaged in lib directory) - used by unit testing classes, not necessary for Jargon deployment
-sl4j and log4j - used for logging (packaged in lib directory)

================================================================================================
Features and Changes

-----------
*fix for  Bug 77 -  Jargon NullPointerException when invoking setResource

-----------
*fix for  Bug 82 -  error querying resources in resource group

-----------
*fix for  Bug 87 -  resource status and other new resource fields in resource metadata for query lookup

-----------
*fix for  Bug 84 -  connection/finalizer issues with Jargon

-----------
*fix for   Bug 91 -  problems with Jargon not detecting dead IRODS Agent
Throw appropriate ProtocolException when reading a header from iRODS and getting zero length. There may be additional work
required to detect the health of a partially failing irodsAgent.

================================================================================================
Outstanding Issues

Please consult https://www.irods.org/bugzilla/buglist.cgi?query_format=specific&order=relevance+desc&bug_status=__open__&product=&content=jargon

for the latest open bugs and Jargon feature requests

================================================================================================
Documentation and Installation

-See the README.txt in this distribution
-Review Jargon documentation at: http://www.irods.org/index.php/Jargon
-Review information at the IRODS web site: http://www.irods.org