@@ -1,0 +1,25 @@
+package edu.sdsc.grid.io.irods;
+
+import static org.junit.Assert.*;
+
+import org.junit.AfterClass;
+import org.junit.BeforeClass;
+import org.junit.Test;
+
+// FIXME: implement command tests per coverage report
+public class IRODSCommandsTest {
+
+	@BeforeClass
+	public static void setUpBeforeClass() throws Exception {
+	}
+
+	@AfterClass
+	public static void tearDownAfterClass() throws Exception {
+	}
+
+	@Test
+	public final void testSimpleQuery() {
+		fail("Not yet implemented");
+	}
+
+}
